tests/errors/error_index_type.nimmy
# Error: Array index must be integer
let arr = [1, 2, 3]
echo arr["one"]